Fixed Location filter being cut off. Centered table data and table headers

--- a/src/App.scss
+++ b/src/App.scss
@@ -921,6 +921,19 @@ Info Circle
       }
     }
   }
+
+}
+#interview-list-table > thead > tr {
+  text-align:center;
+}
+#interview-list-table > thead > tr > th {
+  padding:0.5rem;
+}
+#interview-list-table > tbody > tr > td {
+  text-align:center;
+}
+.interview-list-table-paginate {
+  margin:auto;
 }
 .pointer-table:hover {
     cursor: pointer;
